[tool.poetry]
name = "bare-server"
version = "0.1.0"
description = "An HTTP sever made for learning purposes."
authors = ["surmi <surmi@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
